--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.7.2
+certifi==2023.7.22
+charset-normalizer==3.3.0
+cloudinary==1.36.0
+dj-database-url==2.1.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.22
+idna==3.4
 pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
+urllib3==2.0.6
