--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.22
 idna==3.4
+psycopg2==2.9.9
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
