--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,18 @@ certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
 cloudinary==1.36.0
+crispy-bootstrap5==0.7
 cryptography==41.0.4
 defusedxml==0.7.1
 dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
-Django==3.2.22
+Django==4.2.6
 django-allauth==0.57.0
+django-crispy-forms==2.1
+gunicorn==21.2.0
 idna==3.4
 oauthlib==3.2.2
+packaging==23.2
 psycopg2==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
